--- a/new.ipynb
+++ b/new.ipynb
@@ -70,6 +70,111 @@
     "else:\n",
     "    print(\"c is the biggest number, the value of c is\",c)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "calculator using conditional operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "floor div of two number is 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1=float(input(\"Enter the value of num1=\"))\n",
+    "num2=float(input(\"Enter the value of num2=\"))\n",
+    "operator=input(\"operator\")\n",
+    "\n",
+    "if operator== '+':\n",
+    "    print(\"Addition of two number is\",(num1+num2))\n",
+    "elif operator=='-':\n",
+    "    print(\"subtraction of two number is\",(num1-num2))\n",
+    "elif operator=='*':\n",
+    "    print(\"Multiplication of two number is\",(num1*num2))\n",
+    "elif operator=='/':\n",
+    "    print(\"Division of two number is\",(num1/num2))\n",
+    "elif operator=='%':\n",
+    "    print(\"modulus of two number is\",(num1%num2))\n",
+    "elif operator=='//':\n",
+    "    print(\"floor div of two number is\",(num1//num2))\n",
+    "elif operator=='**':\n",
+    "    print(\"exponentional of given number is\",(num1**num2))\n",
+    "else:\n",
+    "    print(\"please enter correct symbol\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find Loop year using conditional statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024 is Leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "year=int(input(\"Enter the year=\"))\n",
+    "\n",
+    "if year%4==0:\n",
+    "    print(year,\"is Leap year\")\n",
+    "else:\n",
+    "    print(year,\"is not leap year\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Amount of ticket age wise using conditional operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cost of ticket is 10rs\n"
+     ]
+    }
+   ],
+   "source": [
+    "age=int(input(\"please enter the age\"))\n",
+    "\n",
+    "if age<5:\n",
+    "    print(\"The ticket is free for children\")\n",
+    "elif age<20:\n",
+    "    print(\"The cost of ticket is 10rs\")\n",
+    "elif age<60:\n",
+    "    print(\"The cost of ticket is 20rs\")\n",
+    "else:\n",
+    "    print(\"Ticket is free for senior citizens\")"
+   ]
   }
  ],
  "metadata": {
